small language change to armies file

--- a/content/armies.html
+++ b/content/armies.html
@@ -7,7 +7,7 @@
 <h2>Armies</h2>
 
 <p class="lead">
-    Most EA:Ragnarök list are based on lists developed by the NetEA group, Epic-UK group and the F-ERC group. We have
+    Most EA:Ragnarök list are based on lists developed by the NetEA, Epic-UK, and the F-ERC army list development groups. We have
     done a few general changes across all EA:Ragnarök lists as well as various tweaks, nerfs and boosts. Each list contains a description of the list origin and
     the changes we made from the original.
 </p>
