--- a/content/intro.html
+++ b/content/intro.html
@@ -38,7 +38,7 @@
 
 <h4>Army Lists</h4>
 <p>
-    We have designed a wide range of armies for you to play in your EA:Ragnarök games. A lot of list foundations and ideas are credit to the NetEA group, Epic-UK group and the F-ERC group, but all lists has received changes. We have tried to give each list its own unique felling and playstyle. As mentioned above we want the armies to play nice with the epic core rules, so some of the most extreme armies (like Necrons) have received major changes to act more like a "normal" epic armies. We have done a few general changes across all EA:Ragnarök lists that we hope will improve the game, and overall list design.
+    We have designed a wide range of armies for you to play in your EA:Ragnarök games. A lot of list foundations and ideas are credit to the NetEA group, Epic-UK group and the F-ERC group, but all lists has received changes. We have tried to give each list its own unique feeling and playstyle. As mentioned above we want the armies to play nice with the epic core rules, so some of the most extreme armies (like Necrons) have received major changes to act more like a "normal" epic armies. We have done a few general changes across all EA:Ragnarök lists that we hope will improve the game, and overall list design.
 </p>
 <p>
     <b>Titans:</b> We wanted Titans to be a more common sight in Epic. Looking at NetEA and Epic UK we thought there were a few issues
