Steel Legion tweak 2

--- a/lists/IG/steellegion.log.html
+++ b/lists/IG/steellegion.log.html
@@ -30,3 +30,7 @@
 <ul>
     <li>In line with changes made to Imperial Guard Super Heavy Tanks, the Super Heavy Tank Company and Baneblades are slightly cheaper. Baneblades has only 4+ FF.</li>
 </ul>
+<h5>Version 1.0.beta-3</h5>
+<ul>
+    <li>Added the ability for Mechanized Infantry Companies and Leman Russ Companies to be the same size as in the original list.</li>
+</ul>
